--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@headlessui/react": "^2.2.9",
+    "@supabase/supabase-js": "^2.89.0",
     "framer-motion": "^12.23.26",
     "next": "16.1.1",
     "react": "19.2.3",
